fix: spacing issues and minor fixes

--- a/app/javascript/dashboard/assets/scss/_foundation-custom.scss
+++ b/app/javascript/dashboard/assets/scss/_foundation-custom.scss
@@ -7,6 +7,10 @@
   }
 }
 
+select {
+  height: 4.0rem;
+}
+
 .card {
   margin-bottom: var(--space-small);
   padding: var(--space-normal);
