--- a/app/javascript/dashboard/assets/scss/widgets/_reports.scss
+++ b/app/javascript/dashboard/assets/scss/widgets/_reports.scss
@@ -1,7 +1,3 @@
-.date-picker {
-  margin-left: var(--space-smaller);
-}
-
 .reports-option__rounded--item {
   border-radius: 100%;
   height: var(--space-two);
